--- a/src/layout/sections/main/main.module.scss
+++ b/src/layout/sections/main/main.module.scss
@@ -35,7 +35,7 @@
   font-weight: 400;
 }
 .btn{
-  display: block;
+  display: inline-block;
   margin:0 auto;
   margin-top: 118px;
   padding: 30px 60px;
@@ -46,6 +46,32 @@
   font-size: 20px;
   font-weight: 400;
   border-radius: 50px;
+  position: relative;
+  &:hover{
+    background-color: #4CA152;
+    transform: translateY(-4px);
+    &::after{
+      opacity: 0;
+      transform: scaleX(1.5) scaleY(1.7);
+    }
+  }
+  &:active{
+    transform: translateY(-2px);
+  }
+  &::after{
+    content: '';
+    background-color: var(--green-color);
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+   transition: all .4s;
+
+  }
 }
 .imageBlock{
 }
