--- a/src/layout/sections/projects/project/project.module.scss
+++ b/src/layout/sections/projects/project/project.module.scss
@@ -33,6 +33,7 @@
   padding-bottom: 18px;
   text-align: right;
   font-weight: lighter;
+
 }
 
 .desc {
@@ -44,5 +45,8 @@
   display: flex;
   justify-content: center;
   gap:8px;
-  margin-left: 365px;
+  margin-left: 440px;
+  &:hover{
+    color: var(--accent-color);
+  }
 }
